# genai-chatbot-1

./: pyproject.toml
docs/: LLM_Learning_Roadmap.md  chatbot1.md  phase2_vendor_api_notes.md  transformer_basics_phase1.md
notebooks/: chat-redis1a.ipynb  chatbot1.ipynb  chatbot2.ipynb  chatbot2_config.ipynb  phase2_config_notes.md
