[project]
name = "genai-chatbot-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.101.0",
    "google-genai>=2.0.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "rust-just>=1.51.0",
]
